@@ -110,13 +110,10 @@ public class OpenSearchTestBasePlugin implements Plugin<Project> {
                     if (BuildParams.getRuntimeJavaVersion() == JavaVersion.VERSION_1_8) {
                         test.systemProperty("java.locale.providers", "SPI,JRE");
                     } else {
-                        test.systemProperty("java.locale.providers", "SPI,COMPAT");
+                        test.systemProperty("java.locale.providers", "SPI,CLDR");
                         if (test.getJavaVersion().compareTo(JavaVersion.VERSION_17) < 0) {
                             test.jvmArgs("--illegal-access=warn");
                         }
-                    }
-                    if (test.getJavaVersion().compareTo(JavaVersion.VERSION_17) > 0) {
-                        test.jvmArgs("-Djava.security.manager=allow");
                     }
                 }
             });
@@ -162,6 +159,13 @@ public class OpenSearchTestBasePlugin implements Plugin<Project> {
                 nonInputProperties.systemProperty("tests.seed", BuildParams.getTestSeed());
             } else {
                 test.systemProperty("tests.seed", BuildParams.getTestSeed());
+            }
+
+            if (BuildParams.isInFipsJvm()) {
+                test.systemProperty(
+                    "java.security.properties",
+                    project.getRootProject().getLayout().getProjectDirectory() + "/distribution/src/config/fips_java.security"
+                );
             }
 
             // don't track these as inputs since they contain absolute paths and break cache relocatability
